Archive2/b6/af26cc5b6439a0/output
main.cpp:36:5: error: static_assert failed "!!"
    static_assert(has_non_member_f<S, int&>::value, "!!");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
